# langchain-agent-patterns

./: .gitignore  README.md  RELEASE_NOTES.md  langchain-agents-documentation.md  langgraph-deep-agents-documentation.md  skills-reference.md
docs/: langchain-agents.md  langgraph-deep-agents.md  patterns-and-use-cases.md  quick-reference.md  reference-card.md  skills-reference.md
examples/: README.md  agent_with_memory.py  basic_agent.py  deepagent_release_notes.py  langgraph_lats.py  langgraph_plan_and_execute.py  langgraph_reflection.py  langgraph_rewoo.py  rag_agent.py  streaming_agent.py  supervisor_multi_agent.py  swarm_multi_agent.py
examples/deep-research-agent/: ATTRIBUTION.md  README.md  pyproject.toml
examples/lead-lifecycle-agent/: .env.example  DESIGN.md  Dockerfile  README.md  config.py  demo.py  engagement_agent.py  langgraph.json  memory.py  pyproject.toml  qualification_agent.py  schemas.py  tools.py  workflow.py
examples/lead-lifecycle-agent/outputs/: sample-output.md
examples/lead-lifecycle-agent/skills/lead-qualification/: SKILL.md
examples/outputs/: deepagent_release_notes.md
examples/release-notes-agent/: .env.example  README.md  agent.py  langgraph.json  pyproject.toml
examples/release-notes-agent/outputs/: sample-output.md
examples/skills/release-notes/: SKILL.md
examples/text-to-sql-agent/: .gitignore  ATTRIBUTION.md  README.md  pyproject.toml
