[project]
name = "release-notes-agent"
version = "0.1.0"
description = "A deployable Deep Agent that writes house-style release notes from a git commit log."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4,<0.5",
    "langchain>=1.0,<2.0",
    "langchain-anthropic>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
